# video_processor

./: .gitignore  __main__.py  main.py  pyproject.toml  setup.py  video_processor.ipynb
core/: model_loader.py  processor.py  video.py
examples/: model_download_example.py  video_processor_demo.ipynb  video_processor_demo.py
models/: __init__.py
ui/: jupyter_interface.py
utils/: csv_logger.py  logger.py  memory.py
