[project]
name = "video-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "moviepy>=2.1.2",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "psutil>=7.0.0",
    "setuptools>=80.3.1",
    "torch>=2.7.0",
    "ultralytics>=8.3.128",
]
